infrastructure/kubernetes/app/kube-prometheus-stack-manifests/grafana-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: traefik
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https
  hostnames:
    - grafana.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
          group: ""
          kind: Service
          weight: 1
