infrastructure/kubernetes/app/kube-prometheus-stack-manifests/prometheus-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: traefik
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https
  hostnames:
    - prometheus.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-auth
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          group: ""
          kind: Service
          weight: 1
